_______________________________________________________________________________

HH-suite 2.0.11  February 2012

* Support compilation without SSE3 (make NO_SSE3=1)

* Fix some segfaults.

* hhblitsdb.pl: improved. Will generate <db>.cs219 file

* hhblitsdb.pl: A3m and hhm filesnames do not need to be equal to the first
  word in the name line of the corresponding seq219 sequence anymore.
_______________________________________________________________________________

HH-suite 2.0.11  February 2012

* Unbreak hhblitsdb.pl.

* Minor non-visible cleanups and documentation improvements.

* Reorder CHANGES (most recent is at top now) and start documenting minor changes.

_______________________________________________________________________________

HH-suite 2.0.0  January 2012

* The iterative HMM-HMM search method HHblits has been added and the entire package is now called HH-suite. HHblits brings the power of HMM-HMM comparison to mainstream, general-purpose sequence searching and sequence analysis. 

* The speed of HHsearch was further increase through the use of SSE3 instructions.

* An option \verb`-atab` for writing alignment as a table (with posteriors) to file was introduced

* HHsearch is now able to read HMMER3 profiles (but should not be used due to a loss of sensitivity).

* A local amino acid compositional bias correction was introduced. Improvements are slight (<=1%) on a standard SCOP single domain benchmark. However, the improvement for more realistic sequences containing multiple domains, repeats, and regions of strong compositional bias will is probably more pronounced. The score shift parameter has been set to -0.03 bits and the mact parameter to 0.3. 


Bugs? Ideas? Need for improvement? 
soeding@genzentrum.lmu.de

_______________________________________________________________________________

HHsearch 1.6.1 April 2011

* Increase speed by using SSE3 instructions in some functions
