@@ -48,7 +48,7 @@
 //#include "efence.h"
 //#include "efence.c"
 
-#ifdef HH_SSE4
+#ifdef HH_SSE41
 #include <tmmintrin.h>   // SSSE3
 #include <smmintrin.h>   // SSE4.1
 #define HH_SSE3
